kubeconfig/overlays/staging/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decidim-k8s-app-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: decidim-k8s-app
          image: rg.fr-par.scw.cloud/decidim/osp-decidim_staging:latest
