kubeconfig/overlays/staging/sidekiq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decidim-k8s-sidekiq-deployment
spec:
  template:
    spec:
      replicas: 1
      containers:
        - name: decidim-k8s-sidekiq
          image: rg.fr-par.scw.cloud/decidim/osp-decidim_staging:latest
